--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>recipes</title>
+        <style>
+            body {background-color: rgba(255,158,158,0.4);}
+        </style>
     </head>
     <body>
+        <header>
         <h1>My Recipes</h1>
+        </header>
         <ul>
             <li><a target="_blank" rel="noopener noreferrer" href="../odin-recipes/recipes/mangu.html">Los Tres Golpes</a></li>
             <li><a target="_blank" rel="noopener noreferrer" href="../odin-recipes/recipes/mofongo.html">Mofongo</a></li>
