--- a/index.html
+++ b/index.html
@@ -3,20 +3,30 @@
     <head>
         <meta charset="UTF-8">
         <title>recipes</title>
-        <style>
-            body {background-color: rgba(255,158,158,0.4);}
-        </style>
+        <link rel="stylesheet" href="css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header>
-        <h1>My Recipes</h1>
+        <h1 class="title">Eli's Recipes</h1>
         </header>
-        <ul>
-            <li><a target="_blank" rel="noopener noreferrer" href="../odin-recipes/recipes/mangu.html">Los Tres Golpes</a></li>
-            <li><a target="_blank" rel="noopener noreferrer" href="../odin-recipes/recipes/mofongo.html">Mofongo</a></li>
-            <li><a target="_blank" rel="noopener noreferrer" href="../odin-recipes/recipes/moro-de-guandules.html">Moro de Guandules</a></li>
-            <!--<li><a target="_blank" rel="noopener noreferrer" href="../odin-recipes/recipes/la-bandera.html">La Bandera</a></li>-->
-        </ul>
-        
+
+        <main>
+            <div class="tres-golpes">
+                <img width="200px">
+                <a target="_blank" rel="noopener noreferrer" href="../odin-recipes/recipes/mangu.html">Los Tres Golpes</a>
+             </div>
+
+             <div class="mofongo">
+                <img width="200px">
+                <a target="_blank" rel="noopener noreferrer" href="../odin-recipes/recipes/mofongo.html">Mofongo</a>
+            </div>
+
+             <div class="moro-guandules">
+                <img width="200px">
+                <a target="_blank" rel="noopener noreferrer" href="../odin-recipes/recipes/moro-de-guandules.html">Moro de Guandules</a>
+            </div>
+        </main>
+                   
     </body>
 </html>
